--- a/public/style.css
+++ b/public/style.css
@@ -9,12 +9,25 @@ body {
     align-items: center;
 }
 
+/*.container {*/
+/*    height: 100%;*/
+/*    width: 100%;*/
+/*    display: flex;*/
+/*    flex-direction: column;*/
+/*}*/
+
+/*.container div {*/
+/*    position: relative;*/
+/*}*/
+
 .names {
-    height: 100%;
+    /*height: 100%;*/
     width: 80%;
     overflow: hidden;
     position: relative;
     border: 1px solid #333;
+    /*flex: 80;*/
+    flex: 5;
 }
 
 .scroll_screen {
@@ -34,10 +47,11 @@ body {
     justify-content: center;
     align-items: center;
     font-size: 30px;
+    flex: 1;
 }
 
-upload_file button {
-    height: 100%;
+.upload_file button {
+    /*height: 100%;*/
     width: 100%;
     border: none;
     background-color: #333;
@@ -51,13 +65,14 @@ upload_file button {
     background-color: #333;
 }
 
-.upload file button:hover:enabled {
+.upload_file button:hover:enabled {
     background-color: #666;
 }
 
-picked_names {
+.picked_names {
     font-size: 30px;
     color: #ffff00;
+    flex: 1;
 }
 
 #name-file {
