--- a/public/style.css
+++ b/public/style.css
@@ -212,6 +212,35 @@ body {
     animation-duration: 1s;
 }
 
+.lucky-name .name {
+    text-shadow: 3px 4px 3px cadetblue;
+}
+
+.player {
+    position: absolute;
+    top: 25%;
+    left: calc(50% + 5em);
+    width: 3em;
+    z-index: 99;
+    transform: rotate(15deg);
+    animation-name: player-animation;
+    animation-duration: 1s;
+}
+
+.player img {
+    width: 100%;
+}
+
+@keyframes player-animation {
+    from {
+        transform: rotate(0);
+        left: calc(50% + 6em);
+    }
+    to {
+        transform: rotate(15deg);
+    }
+}
+
 @keyframes round-animation {
     from {
         transform: rotate(-360deg);
